fix: getAuthentication 메소드 수정